--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body onload="pageLoad()">
     <div class="sidebar" id="sidebar">
         <span class="close-btn" onclick="toggleSidebar()">&#x2715;</span>
-        <a href="h.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="c.html">Care</a>
         <a href="pro.html">Products</a>
         <a href="aboutus.html">About Us</a>
@@ -22,7 +22,7 @@
                 <span class="title">SUN CHIPS</span>
             </div>
             <nav class="main-nav">
-                <a href="h.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="c.html">Care</a>
                 <a href="pro.html">Products</a>
                 <a href="aboutus.html">About Us</a>
