--- a/pro.html
+++ b/pro.html
@@ -14,7 +14,7 @@
     </div>
     <nav>
         <ul>
-          <li><a href="h.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="c.html">Care</a></li>
           <li><a href="pro.html">Products</a></li>
           <li><a href="aboutus.html">About Us</a></li>
@@ -26,7 +26,7 @@
 <aside id="sidebar">
   <div class="back-btn" onclick="toggleSidebar()">✖</div>
   <ul>
-    <li><a href="h.html">Home</a></li>
+    <li><a href="index.html">Home</a></li>
     <li><a href="c.html">Care</a></li>
     <li><a href="pro.html">Products</a></li>
     <li><a href="aboutus.html">About Us</a></li>
